--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -323,6 +323,128 @@
    "source": [
     "get_product(x=2,y=\"4\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data fro gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://drive.google.com/file/d/14CqsriHuZNZkvvCK3I-d90vXlJhHbx4z/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '14CqsriHuZNZkvvCK3I-d90vXlJhHbx4z',\n",
+       " 'view?usp=sharing']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'14CqsriHuZNZkvvCK3I-d90vXlJhHbx4z'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filed_id = url.split(\"/\")[-2]\n",
+    "filed_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix ='https://drive.google.com/uc?/export=download&id='\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gdown' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgdown\u001b[49m\u001b[38;5;241m.\u001b[39mdownload(prefix\u001b[38;5;241m+\u001b[39mfiled_id,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchest-CT-scan-data.zip\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gdown' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gdown.download(prefix+filed_id,\"chest-CT-scan-data.zip\")\n"
+   ]
   }
  ],
  "metadata": {
