--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -333,11 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gdrive"
+    "import gdown"
    ]
   },
   {
@@ -427,19 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'gdown' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgdown\u001b[49m\u001b[38;5;241m.\u001b[39mdownload(prefix\u001b[38;5;241m+\u001b[39mfiled_id,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchest-CT-scan-data.zip\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gdown' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=14CqsriHuZNZkvvCK3I-d90vXlJhHbx4z\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=14CqsriHuZNZkvvCK3I-d90vXlJhHbx4z&confirm=t&uuid=0f1cf23c-22ee-4f8c-8faa-2583f7ca22a1\n",
+      "To: d:\\Users\\User\\Desktop\\inouren_projects\\project2\\Chest-Disease-Classification-from-Chest-CT-Scan-Image\\research\\chest-CT-scan-data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:02<00:00, 19.7MB/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'chest-CT-scan-data.zip'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
