--- a/research/03_model_trainer.ipynb
+++ b/research/03_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Users\\\\User\\\\Desktop\\\\inouren_projects\\\\project2\\\\Chest-Disease-Classification-from-Chest-CT-Scan-Image\\\\research'"
+       "'/workspaces/Chest-Disease-Classification-from-Chest-CT-Scan-Image/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Users\\\\User\\\\Desktop\\\\inouren_projects\\\\project2\\\\Chest-Disease-Classification-from-Chest-CT-Scan-Image'"
+       "'/workspaces/Chest-Disease-Classification-from-Chest-CT-Scan-Image'"
       ]
      },
      "execution_count": 4,
@@ -84,7 +84,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-29 05:10:30.310690: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-29 05:10:32.002680: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-29 05:10:32.003829: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-29 05:10:35.448025: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from cnnClassifier.constants import *\n",
     "from cnnClassifier.utils.common import read_yaml, create_directories\n",
@@ -242,9 +254,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-28 23:19:05,775: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-28 23:19:05,783: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-28 23:19:05,785: INFO: common: created directory at: artifacts]\n"
+      "[2024-05-29 05:11:22,373: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-05-29 05:11:22,379: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-29 05:11:22,380: INFO: common: created directory at: artifacts]\n"
      ]
     },
     {
@@ -252,45 +264,45 @@
      "evalue": "\"'ConfigBox' object has no attribute 'training'\"",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'training'",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'training'",
       "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'training'\"",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'training'\"",
       "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
       "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\"",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\"",
       "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'training'",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'training'",
       "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'training'\"",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'training'\"",
       "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
       "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m     training\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m ConfigurationManager()\n\u001b[1;32m----> 3\u001b[0m     training_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_training_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     training \u001b[38;5;241m=\u001b[39m Training(config\u001b[38;5;241m=\u001b[39mtraining_config)\n\u001b[0;32m      5\u001b[0m     training\u001b[38;5;241m.\u001b[39mget_base_model()\n",
-      "Cell \u001b[1;32mIn[7], line 15\u001b[0m, in \u001b[0;36mConfigurationManager.get_training_config\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_training_config\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m TrainingConfig:\n\u001b[1;32m---> 15\u001b[0m     training \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining\u001b[49m\n\u001b[0;32m     16\u001b[0m     prepare_base_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mprepare_base_model\n\u001b[0;32m     17\u001b[0m     params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\n",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32md:\\Users\\User\\anaconda3\\envs\\chest\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\""
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     training\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m ConfigurationManager()\n\u001b[0;32m----> 3\u001b[0m     training_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_training_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     training \u001b[38;5;241m=\u001b[39m Training(config\u001b[38;5;241m=\u001b[39mtraining_config)\n\u001b[1;32m      5\u001b[0m     training\u001b[38;5;241m.\u001b[39mget_base_model()\n",
+      "Cell \u001b[0;32mIn[7], line 15\u001b[0m, in \u001b[0;36mConfigurationManager.get_training_config\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_training_config\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m TrainingConfig:\n\u001b[0;32m---> 15\u001b[0m     training \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining\u001b[49m\n\u001b[1;32m     16\u001b[0m     prepare_base_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mprepare_base_model\n\u001b[1;32m     17\u001b[0m     params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\n",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/conda/envs/chest/lib/python3.8/site-packages/box/box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\""
      ]
     }
    ],
