--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Users\\\\User\\\\Desktop\\\\inouren_projects\\\\project2\\\\Chest-Disease-Classification-from-Chest-CT-Scan-Image\\\\research'"
+       "'/workspaces/Chest-Disease-Classification-from-Chest-CT-Scan-Image/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Users\\\\User\\\\Desktop\\\\inouren_projects\\\\project2\\\\Chest-Disease-Classification-from-Chest-CT-Scan-Image'"
+       "'/workspaces/Chest-Disease-Classification-from-Chest-CT-Scan-Image'"
       ]
      },
      "execution_count": 4,
@@ -132,7 +132,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-29 05:21:14.386752: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-29 05:21:14.424133: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-29 05:21:14.425051: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-29 05:21:15.083750: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import urllib.request as request\n",
@@ -221,13 +233,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-28 18:31:12,607: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-28 18:31:12,612: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-28 18:31:12,614: INFO: common: created directory at: artifacts]\n",
-      "[2024-05-28 18:31:12,617: INFO: common: created directory at: artifacts/prepare_base_model]\n",
+      "[2024-05-29 05:21:16,200: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-05-29 05:21:16,203: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-29 05:21:16,204: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-29 05:21:16,205: INFO: common: created directory at: artifacts/prepare_base_model]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58889256/58889256 [==============================] - 15s 0us/step\n",
-      "[2024-05-28 18:31:29,239: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "58889256/58889256 [==============================] - 5s 0us/step\n",
+      "[2024-05-29 05:21:23,152: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
