still not connecting with mlflow

--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -78,11 +78,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-29 12:00:38.095778: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-29 12:00:38.134920: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-29 12:00:38.136017: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-05-30 06:02:52.922812: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-30 06:02:55.164690: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-30 06:02:55.165908: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-29 12:00:39.028916: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-05-30 06:03:00.788316: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -253,9 +253,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-29 12:00:40,878: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-05-29 12:00:40,880: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-29 12:00:40,881: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-30 06:03:08,998: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-05-30 06:03:09,014: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-30 06:03:09,015: INFO: common: created directory at: artifacts]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found 102 images belonging to 2 classes.\n"
      ]
     },
@@ -263,63 +269,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-29 12:00:41.251660: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "2024-05-30 06:03:09.684195: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
       "\t [[{{node Placeholder/_0}}]]\n",
-      "2024-05-29 12:00:41.487860: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n",
-      "2024-05-29 12:00:41.687556: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n"
+      "2024-05-30 06:03:10.272349: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n",
+      "2024-05-30 06:03:10.849217: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n",
+      "2024-05-30 06:03:11.664776: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 51380224 exceeds 10% of free system memory.\n",
+      "2024-05-30 06:03:11.711480: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 102760448 exceeds 10% of free system memory.\n",
+      "2024-05-30 06:03:12.136630: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 102760448 exceeds 10% of free system memory.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/7 [===>..........................] - ETA: 36s - loss: 4.7327 - accuracy: 0.1250"
+      "7/7 [==============================] - 40s 5s/step - loss: 28.6921 - accuracy: 0.5686\n",
+      "[2024-05-30 06:03:51,101: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-29 12:00:47.385000: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n",
-      "2024-05-29 12:00:47.564576: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n"
+      "2024/05/30 06:03:52 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/7 [=======>......................] - ETA: 29s - loss: 4.1979 - accuracy: 0.2188"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-29 12:00:53.279881: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 205520896 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7/7 [==============================] - 38s 5s/step - loss: 2.4512 - accuracy: 0.5196\n",
-      "[2024-05-29 12:01:22,370: INFO: common: json file saved at: scores.json]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/05/29 12:01:23 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-05-29 12:01:24,852: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: /tmp/tmpyv9a9jt3/model/data/model/assets\n",
-      "[2024-05-29 12:01:25,266: INFO: builder_impl: Assets written to: /tmp/tmpyv9a9jt3/model/data/model/assets]\n"
+      "[2024-05-30 06:03:54,005: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: /tmp/tmpw26wuk3s/model/data/model/assets\n",
+      "[2024-05-30 06:03:54,601: INFO: builder_impl: Assets written to: /tmp/tmpw26wuk3s/model/data/model/assets]\n"
      ]
     },
     {
@@ -329,8 +309,8 @@
       "/opt/conda/envs/chest/lib/python3.8/site-packages/_distutils_hack/__init__.py:26: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2024/05/29 12:01:45 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 3\n",
-      "Created version '3' of model 'VGG16Model'.\n"
+      "2024/05/30 06:04:20 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 4\n",
+      "Created version '4' of model 'VGG16Model'.\n"
      ]
     }
    ],
